# snap-app

./: LICENSE  README.md  snap-app.cabal  stack.yaml
db/Migration/: CreateTodosTable.hs
resources/: devel.cfg  test.cfg
src/: Application.hs  Site.hs  Util.hs
src/Api/: Core.hs  Types.hs
src/Api/Service/: TodoService.hs
src/Controller/: Exception.hs  Login.hs  Todos.hs
src/Handler/: EchoHandler.hs
src/Model/: Todo.hs
test/: Runner.hs  SiteSpec.hs
test/Api/: CoreSpec.hs  TypesSpec.hs
test/Controller/: TodosSpec.hs
test/Handler/: EchoHandlerSpec.hs
test/Model/: TodoSpec.hs
