name:                snap-app
version:             0.1.0.0
synopsis:            My first Haskell Web Application
description:         Please see README.md
homepage:            http://github.com/AbhijeetPawar/blog#readme
license:             BSD3
license-file:        LICENSE
author:              Abhijeet Pawar
maintainer:          304abhijeet@gmail.com
copyright:           Copyright (c) 2015 Abhijeet Pawar
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Handler.EchoHandler
  build-depends:       base
                     , bytestring
                     , mtl
                     , snap-core
  default-language:    Haskell2010

          
Executable snap-app
  hs-source-dirs: src
  main-is: Main.hs
  
  Build-depends:
                base
              , lens
              , bytestring                
              , heist                     
              , MonadCatchIO-transformers 
              , mtl                       
              , snap                      
              , snap-core                 
              , snap-server               
              , snap-loader-static        
              , text                      
              , time                      
              , xmlhtml                   
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  other-modules: Application
               , Site

test-suite snap-app-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , snap-app
                     , hspec
                     , HUnit
                     , snap-core
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules: Handler.EchoHandlerSpec


source-repository head
  type:     git
  location: https://github.com/AbhijeetPawar/snap-app
