name:                snap-app
version:             0.1.0.0
synopsis:            My first Haskell Web Application
description:         Please see README.md
homepage:            http://github.com/AbhijeetPawar/snapa-app#readme
license:             BSD3
license-file:        LICENSE
author:              Abhijeet Pawar
maintainer:          304abhijeet@gmail.com
copyright:           Copyright (c) 2015 Abhijeet Pawar
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base
                     , lens
                     , bytestring
                     , MonadCatchIO-transformers
                     , mtl
                     , snap
                     , snap-core
                     , snap-server
                     , snap-loader-static
                     , snaplet-postgresql-simple
                     , text
                     , time
                     , aeson
                     , transformers
  exposed-modules:     Site
                     , Model.Todo
                     , Controller.Login
                     , Controller.Todos
                     , Controller.Exception
  other-modules:       Application
  default-language:    Haskell2010


executable snap-app
  hs-source-dirs: app
  main-is: Main.hs

  Build-depends:
                base
              , snap-app
              , snap
              , snap-core
              , snap-server
              , snap-loader-static
              , text
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N


test-suite suite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , snap-app
                     , hspec
                     , hspec-snap
                     , HUnit
                     , snap
                     , snap-core
                     , bytestring
                     , containers
                     , text
                     , aeson
                     , transformers
                     , snaplet-postgresql-simple
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       SiteSpec
                     , Runner
                     , Model.TodoSpec
                     , Controller.TodosSpec
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/AbhijeetPawar/snap-app.git
